sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/README.md
# client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for in some common scenarios.

| **File Name**                                                                                               | **Description**                                                                                                                                                                                                                                                                                                                                |
| ----------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [administratorsCreateSample.ts][administratorscreatesample]                                                 | Creates a new server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/AdministratorAdd.json                                                                                                                                                                        |
| [administratorsDeleteSample.ts][administratorsdeletesample]                                                 | Deletes an Microsoft Entra Administrator associated with the server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/AdministratorDelete.json                                                                                                                      |
| [administratorsGetSample.ts][administratorsgetsample]                                                       | Gets information about a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/AdministratorGet.json                                                                                                                                                             |
| [administratorsListByServerSample.ts][administratorslistbyserversample]                                     | List all the AAD administrators for a given server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/AdministratorsListByServer.json                                                                                                                                |
| [administratorsMicrosoftEntraCreateOrUpdateSample.ts][administratorsmicrosoftentracreateorupdatesample]     | Creates a new server administrator associated to a Microsoft Entra principal. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/AdministratorsMicrosoftEntraAdd.json                                                                                                          |
| [administratorsMicrosoftEntraDeleteSample.ts][administratorsmicrosoftentradeletesample]                     | Deletes an existing server administrator associated to a Microsoft Entra principal. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/AdministratorsMicrosoftEntraDelete.json                                                                                                 |
| [administratorsMicrosoftEntraGetSample.ts][administratorsmicrosoftentragetsample]                           | Gets information about a server administrator associated to a Microsoft Entra principal. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/AdministratorsMicrosoftEntraGet.json                                                                                               |
| [administratorsMicrosoftEntraListByServerSample.ts][administratorsmicrosoftentralistbyserversample]         | List all server administrators associated to a Microsoft Entra principal. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/AdministratorsMicrosoftEntraListByServer.json                                                                                                     |
| [advancedThreatProtectionSettingsGetSample.ts][advancedthreatprotectionsettingsgetsample]                   | Gets state of advanced threat protection settings for a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/AdvancedThreatProtectionSettingsGet.json                                                                                                                    |
| [advancedThreatProtectionSettingsListByServerSample.ts][advancedthreatprotectionsettingslistbyserversample] | Lists state of advanced threat protection settings for a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/AdvancedThreatProtectionSettingsListByServer.json                                                                                                          |
| [backupsAutomaticAndOnDemandCreateSample.ts][backupsautomaticandondemandcreatesample]                       | Creates an on demand backup of a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/BackupsAutomaticAndOnDemandCreate.json                                                                                                                                             |
| [backupsAutomaticAndOnDemandDeleteSample.ts][backupsautomaticandondemanddeletesample]                       | Deletes a specific backup, given its name. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/BackupsAutomaticAndOnDemandDelete.json                                                                                                                                           |
| [backupsAutomaticAndOnDemandGetSample.ts][backupsautomaticandondemandgetsample]                             | Gets information of an on demand backup, given its name. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/BackupsAutomaticAndOnDemandGet.json                                                                                                                                |
| [backupsAutomaticAndOnDemandListByServerSample.ts][backupsautomaticandondemandlistbyserversample]           | Lists all available backups of a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/BackupsAutomaticAndOnDemandListByServer.json                                                                                                                                       |
| [backupsCreateSample.ts][backupscreatesample]                                                               | Create a specific backup for PostgreSQL flexible server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/BackupCreate.json                                                                                                                                         |
| [backupsDeleteSample.ts][backupsdeletesample]                                                               | Deletes a specific backup. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/BackupDelete.json                                                                                                                                                                       |
| [backupsGetSample.ts][backupsgetsample]                                                                     | Get specific backup for a given server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/BackupGet.json                                                                                                                                                             |
| [backupsListByServerSample.ts][backupslistbyserversample]                                                   | List all the backups for a given server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/BackupListByServer.json                                                                                                                                                   |
| [backupsLongTermRetentionCheckPrerequisitesSample.ts][backupslongtermretentioncheckprerequisitessample]     | Performs all checks required for a long term retention backup operation to succeed. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/BackupsLongTermRetentionCheckPrerequisites.json                                                                                         |
| [backupsLongTermRetentionGetSample.ts][backupslongtermretentiongetsample]                                   | Gets the results of a long retention backup operation for a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/BackupsLongTermRetentionGet.json                                                                                                                        |
| [backupsLongTermRetentionListByServerSample.ts][backupslongtermretentionlistbyserversample]                 | Lists the results of the long term retention backup operations for a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/BackupsLongTermRetentionListByServer.json                                                                                                      |
| [backupsLongTermRetentionStartSample.ts][backupslongtermretentionstartsample]                               | Initiates a long term retention backup. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/BackupsLongTermRetentionStart.json                                                                                                                                                  |
| [capabilitiesByLocationListSample.ts][capabilitiesbylocationlistsample]                                     | Lists the capabilities available in a given location for a specific subscription. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/CapabilitiesByLocationList.json                                                                                                           |
| [capabilitiesByServerListSample.ts][capabilitiesbyserverlistsample]                                         | Lists the capabilities available for a given server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/CapabilitiesByServerList.json                                                                                                                                          |
| [capturedLogsListByServerSample.ts][capturedlogslistbyserversample]                                         | Lists all captured logs for download in a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/CapturedLogsListByServer.json                                                                                                                                             |
| [checkMigrationNameAvailabilitySample.ts][checkmigrationnameavailabilitysample]                             | This method checks whether a proposed migration name is valid and available. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/CheckMigrationNameAvailability.json                                                                                                   |
| [checkNameAvailabilityExecuteSample.ts][checknameavailabilityexecutesample]                                 | Check the availability of name for resource x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/CheckNameAvailability.json                                                                                                                                             |
| [checkNameAvailabilityWithLocationExecuteSample.ts][checknameavailabilitywithlocationexecutesample]         | Check the availability of name for resource x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/CheckNameAvailabilityLocationBased.json                                                                                                                                |
| [configurationsGetSample.ts][configurationsgetsample]                                                       | Gets information about a specific configuration (also known as server parameter) of a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ConfigurationsGet.json                                                                                                        |
| [configurationsListByServerSample.ts][configurationslistbyserversample]                                     | Lists all configurations (also known as server parameters) of a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ConfigurationsListByServer.json                                                                                                                     |
| [configurationsPutSample.ts][configurationsputsample]                                                       | Updates, using Put verb, the value assigned to a specific modifiable configuration (also known as server parameter) of a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ConfigurationsUpdateUsingPut.json                                                          |
| [configurationsUpdateSample.ts][configurationsupdatesample]                                                 | Updates the value assigned to a specific modifiable configuration (also known as server parameter) of a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ConfigurationsUpdate.json                                                                                   |
| [databasesCreateSample.ts][databasescreatesample]                                                           | Creates a new database. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/DatabasesCreate.json                                                                                                                                                                                |
| [databasesDeleteSample.ts][databasesdeletesample]                                                           | Deletes an existing database. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/DatabasesDelete.json                                                                                                                                                                          |
| [databasesGetSample.ts][databasesgetsample]                                                                 | Gets information about an existing database. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/DatabasesGet.json                                                                                                                                                              |
| [databasesListByServerSample.ts][databaseslistbyserversample]                                               | Lists all databases in a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/DatabasesListByServer.json                                                                                                                                                                 |
| [firewallRulesCreateOrUpdateSample.ts][firewallrulescreateorupdatesample]                                   | Creates a new firewall rule or updates an existing firewall rule. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/FirewallRulesCreateOrUpdate.json                                                                                                                          |
| [firewallRulesDeleteSample.ts][firewallrulesdeletesample]                                                   | Deletes an existing firewall rule. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/FirewallRulesDelete.json                                                                                                                                                                 |
| [firewallRulesGetSample.ts][firewallrulesgetsample]                                                         | Gets information about a firewall rule in a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/FirewallRulesGet.json                                                                                                                                                   |
| [firewallRulesListByServerSample.ts][firewallruleslistbyserversample]                                       | Lists information about all firewall rules in a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/FirewallRulesListByServer.json                                                                                                                                      |
| [flexibleServerStartLtrBackupSample.ts][flexibleserverstartltrbackupsample]                                 | Start the Long Term Retention Backup operation x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/LongTermRetentionBackup.json                                                                                                                                        |
| [flexibleServerTriggerLtrPreBackupSample.ts][flexibleservertriggerltrprebackupsample]                       | PreBackup operation performs all the checks that are needed for the subsequent long term retention backup operation to succeed. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/LongTermRetentionPreBackup.json                                                    |
| [getPrivateDnsZoneSuffixExecuteSample.ts][getprivatednszonesuffixexecutesample]                             | Get private DNS zone suffix in the cloud x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/GetPrivateDnsZoneSuffix.json                                                                                                                                              |
| [locationBasedCapabilitiesExecuteSample.ts][locationbasedcapabilitiesexecutesample]                         | Get capabilities at specified location in a given subscription. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/CapabilitiesByLocation.json                                                                                                                        |
| [logFilesListByServerSample.ts][logfileslistbyserversample]                                                 | List all the server log files in a given server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/LogFilesListByServer.json                                                                                                                                         |
| [ltrBackupOperationsGetSample.ts][ltrbackupoperationsgetsample]                                             | Gets the result of the give long term retention backup operation for the flexible server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/LongTermRetentionOperationGet.json                                                                                       |
| [ltrBackupOperationsListByServerSample.ts][ltrbackupoperationslistbyserversample]                           | Gets the result of the give long term retention backup operations for the flexible server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/LongTermRetentionOperationListByServer.json                                                                             |
| [migrationsCancelSample.ts][migrationscancelsample]                                                         | Cancels an active migration. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/MigrationsCancel.json                                                                                                                                                                          |
| [migrationsCheckNameAvailabilitySample.ts][migrationschecknameavailabilitysample]                           | Checks if a proposed migration name is valid and available. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/MigrationsCheckNameAvailability.json                                                                                                                            |
| [migrationsCreateSample.ts][migrationscreatesample]                                                         | Creates a new migration. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/MigrationsCreateValidateOnly.json                                                                                                                                                                  |
| [migrationsDeleteSample.ts][migrationsdeletesample]                                                         | Deletes a migration. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/Migrations_Delete.json                                                                                                                                                                        |
| [migrationsGetSample.ts][migrationsgetsample]                                                               | Gets information about a migration. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/MigrationsGetMigrationWithSuccessfulValidationAndMigration.json                                                                                                                         |
| [migrationsListByTargetServerSample.ts][migrationslistbytargetserversample]                                 | Lists all migrations of a target flexible server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/MigrationsListByTargetServer.json                                                                                                                                         |
| [migrationsUpdateSample.ts][migrationsupdatesample]                                                         | Updates an existing migration. The request body can contain one to many of the mutable properties present in the migration definition. Certain property updates initiate migration state transitions. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/MigrationsUpdate.json |
| [nameAvailabilityCheckGloballySample.ts][nameavailabilitycheckgloballysample]                               | Checks the validity and availability of the given name, to assign it to a new server or to use it as the base name of a new pair of virtual endpoints. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/NameAvailabilityCheckGlobally.json                                   |
| [nameAvailabilityCheckWithLocationSample.ts][nameavailabilitycheckwithlocationsample]                       | Check the availability of name for resource x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/NameAvailabilityCheckWithLocation.json                                                                                                                                          |
| [operationsListSample.ts][operationslistsample]                                                             | Lists all available REST API operations. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/OperationsList.json                                                                                                                                                                |
| [privateDnsZoneSuffixGetSample.ts][privatednszonesuffixgetsample]                                           | Gets the private DNS zone suffix. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/PrivateDnsZoneSuffixGet.json                                                                                                                                                              |
| [privateEndpointConnectionDeleteSample.ts][privateendpointconnectiondeletesample]                           | Deletes a private endpoint connection with a given name. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/PrivateEndpointConnectionDelete.json                                                                                                                      |
| [privateEndpointConnectionUpdateSample.ts][privateendpointconnectionupdatesample]                           | Approve or reject a private endpoint connection with a given name. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/PrivateEndpointConnectionUpdate.json                                                                                                            |
| [privateEndpointConnectionsDeleteSample.ts][privateendpointconnectionsdeletesample]                         | Deletes a private endpoint connection. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/PrivateEndpointConnectionsDelete.json                                                                                                                                                |
| [privateEndpointConnectionsGetSample.ts][privateendpointconnectionsgetsample]                               | Gets a private endpoint connection. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/PrivateEndpointConnectionsGet.json                                                                                                                                                      |
| [privateEndpointConnectionsListByServerSample.ts][privateendpointconnectionslistbyserversample]             | Lists all private endpoint connections on a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/PrivateEndpointConnectionsList.json                                                                                                                                     |
| [privateEndpointConnectionsUpdateSample.ts][privateendpointconnectionsupdatesample]                         | Approves or rejects a private endpoint connection. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/PrivateEndpointConnectionsUpdate.json                                                                                                                                    |
| [privateLinkResourcesGetSample.ts][privatelinkresourcesgetsample]                                           | Gets a private link resource for PostgreSQL server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/PrivateLinkResourcesGet.json                                                                                                                                            |
| [privateLinkResourcesListByServerSample.ts][privatelinkresourceslistbyserversample]                         | Gets the private link resources for PostgreSQL server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/PrivateLinkResourcesList.json                                                                                                                                        |
| [quotaUsagesListSample.ts][quotausageslistsample]                                                           | Get quota usages at specified location in a given subscription. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/QuotaUsagesForFlexibleServers.json                                                                                                                          |
| [replicasListByServerSample.ts][replicaslistbyserversample]                                                 | Lists all read replicas of a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ReplicasListByServer.json                                                                                                                                                              |
| [serverCapabilitiesListSample.ts][servercapabilitieslistsample]                                             | Get capabilities for a flexible server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/ServerCapabilities.json                                                                                                                                                    |
| [serverThreatProtectionSettingsCreateOrUpdateSample.ts][serverthreatprotectionsettingscreateorupdatesample] | Creates or updates a server's Advanced Threat Protection settings. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/AdvancedThreatProtectionSettingsCreateOrUpdate.json                                                                                                      |
| [serverThreatProtectionSettingsGetSample.ts][serverthreatprotectionsettingsgetsample]                       | Get a server's Advanced Threat Protection settings. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/ServerThreatProtectionSettingsGet.json                                                                                                                         |
| [serverThreatProtectionSettingsListByServerSample.ts][serverthreatprotectionsettingslistbyserversample]     | Get a list of server's Threat Protection state. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/ServerThreatProtectionSettingsListByServer.json                                                                                                                    |
| [serversCreateOrUpdateSample.ts][serverscreateorupdatesample]                                               | Creates a new server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ServersClusterCreate.json                                                                                                                                                                             |
| [serversCreateSample.ts][serverscreatesample]                                                               | Creates a new server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/ClusterCreate.json                                                                                                                                                                           |
| [serversDeleteSample.ts][serversdeletesample]                                                               | Deletes or drops an existing server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ServersDelete.json                                                                                                                                                                     |
| [serversGetSample.ts][serversgetsample]                                                                     | Gets information about an existing server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ServersGetWithVnet.json                                                                                                                                                          |
| [serversListByResourceGroupSample.ts][serverslistbyresourcegroupsample]                                     | Lists all servers in a resource group. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ServersListByResourceGroup.json                                                                                                                                                      |
| [serversListBySubscriptionSample.ts][serverslistbysubscriptionsample]                                       | Lists all servers in a subscription. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ServersListBySubscription.json                                                                                                                                                         |
| [serversListSample.ts][serverslistsample]                                                                   | List all the servers in a given subscription. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/ServerList.json                                                                                                                                                      |
| [serversRestartSample.ts][serversrestartsample]                                                             | Restarts PostgreSQL database engine in a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ServersRestartWithFailover.json                                                                                                                                            |
| [serversStartSample.ts][serversstartsample]                                                                 | Starts a stopped server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ServersStart.json                                                                                                                                                                                  |
| [serversStopSample.ts][serversstopsample]                                                                   | Stops a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ServersStop.json                                                                                                                                                                                            |
| [serversUpdateSample.ts][serversupdatesample]                                                               | Updates an existing server. The request body can contain one or multiple of the properties present in the normal server definition. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/ServersPromoteReplicaAsForcedStandaloneServer.json                                      |
| [tuningConfigurationDisableSample.ts][tuningconfigurationdisablesample]                                     | Disables the config tuning. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/TuningConfiguration_Disable.json                                                                                                                                                       |
| [tuningConfigurationEnableSample.ts][tuningconfigurationenablesample]                                       | Enables the config tuning. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/TuningConfiguration_Enable.json                                                                                                                                                         |
| [tuningConfigurationListSessionDetailsSample.ts][tuningconfigurationlistsessiondetailssample]               | Gets the session details of a config tuning session. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/TuningConfiguration_ListSessionDetails.json                                                                                                                   |
| [tuningConfigurationListSessionsSample.ts][tuningconfigurationlistsessionssample]                           | Gets up the config tuning session status. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/TuningConfiguration_ListSessions.json                                                                                                                                    |
| [tuningConfigurationStartSessionSample.ts][tuningconfigurationstartsessionsample]                           | Starts up the config tuning session. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/TuningConfiguration_StartSession.json                                                                                                                                         |
| [tuningConfigurationStopSessionSample.ts][tuningconfigurationstopsessionsample]                             | Stops the config tuning session. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/TuningConfiguration_StopSession.json                                                                                                                                              |
| [tuningIndexListRecommendationsSample.ts][tuningindexlistrecommendationssample]                             | Retrieve the list of available tuning index recommendations. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/TuningIndex_GetFilteredRecommendations.json                                                                                                           |
| [tuningOptionsGetSample.ts][tuningoptionsgetsample]                                                         | Gets the tuning options of a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/TuningOptionsGet.json                                                                                                                                                                  |
| [tuningOptionsListByServerSample.ts][tuningoptionslistbyserversample]                                       | Lists the tuning options of a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/TuningOptionsListByServer.json                                                                                                                                                        |
| [tuningOptionsListRecommendationsSample.ts][tuningoptionslistrecommendationssample]                         | Lists available object recommendations. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/TuningOptionsListIndexRecommendationsFilteredForCreateIndex.json                                                                                                                    |
| [virtualEndpointsCreateSample.ts][virtualendpointscreatesample]                                             | Creates a pair of virtual endpoints for a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/VirtualEndpointCreate.json                                                                                                                                                |
| [virtualEndpointsDeleteSample.ts][virtualendpointsdeletesample]                                             | Deletes a pair of virtual endpoints. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/VirtualEndpointDelete.json                                                                                                                                                             |
| [virtualEndpointsGetSample.ts][virtualendpointsgetsample]                                                   | Gets information about a pair of virtual endpoints. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/VirtualEndpointsGet.json                                                                                                                                                |
| [virtualEndpointsListByServerSample.ts][virtualendpointslistbyserversample]                                 | Lists pair of virtual endpoints associated to a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/VirtualEndpointsListByServer.json                                                                                                                                   |
| [virtualEndpointsUpdateSample.ts][virtualendpointsupdatesample]                                             | Updates a pair of virtual endpoints for a server. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/VirtualEndpointUpdate.json                                                                                                                                                |
| [virtualNetworkSubnetUsageExecuteSample.ts][virtualnetworksubnetusageexecutesample]                         | Get virtual network subnet usage for a given vNet resource id. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/preview/2025-01-01-preview/examples/VirtualNetworkSubnetUsage.json                                                                                                                      |
| [virtualNetworkSubnetUsageListSample.ts][virtualnetworksubnetusagelistsample]                               | Lists the virtual network subnet usage for a given virtual network. x-ms-original-file: specification/postgresql/resource-manager/Microsoft.DBforPostgreSQL/stable/2025-08-01/examples/VirtualNetworkSubnetUsageList.json                                                                                                                      |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/administratorsCreateSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
cross-env POSTGRESQL_SUBSCRIPTION_ID="<postgresql subscription id>" POSTGRESQL_RESOURCE_GROUP="<postgresql resource group>" node dist/administratorsCreateSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[administratorscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/administratorsCreateSample.ts
[administratorsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/administratorsDeleteSample.ts
[administratorsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/administratorsGetSample.ts
[administratorslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/administratorsListByServerSample.ts
[administratorsmicrosoftentracreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/administratorsMicrosoftEntraCreateOrUpdateSample.ts
[administratorsmicrosoftentradeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/administratorsMicrosoftEntraDeleteSample.ts
[administratorsmicrosoftentragetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/administratorsMicrosoftEntraGetSample.ts
[administratorsmicrosoftentralistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/administratorsMicrosoftEntraListByServerSample.ts
[advancedthreatprotectionsettingsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/advancedThreatProtectionSettingsGetSample.ts
[advancedthreatprotectionsettingslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/advancedThreatProtectionSettingsListByServerSample.ts
[backupsautomaticandondemandcreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/backupsAutomaticAndOnDemandCreateSample.ts
[backupsautomaticandondemanddeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/backupsAutomaticAndOnDemandDeleteSample.ts
[backupsautomaticandondemandgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/backupsAutomaticAndOnDemandGetSample.ts
[backupsautomaticandondemandlistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/backupsAutomaticAndOnDemandListByServerSample.ts
[backupscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/backupsCreateSample.ts
[backupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/backupsDeleteSample.ts
[backupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/backupsGetSample.ts
[backupslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/backupsListByServerSample.ts
[backupslongtermretentioncheckprerequisitessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/backupsLongTermRetentionCheckPrerequisitesSample.ts
[backupslongtermretentiongetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/backupsLongTermRetentionGetSample.ts
[backupslongtermretentionlistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/backupsLongTermRetentionListByServerSample.ts
[backupslongtermretentionstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/backupsLongTermRetentionStartSample.ts
[capabilitiesbylocationlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/capabilitiesByLocationListSample.ts
[capabilitiesbyserverlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/capabilitiesByServerListSample.ts
[capturedlogslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/capturedLogsListByServerSample.ts
[checkmigrationnameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/checkMigrationNameAvailabilitySample.ts
[checknameavailabilityexecutesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/checkNameAvailabilityExecuteSample.ts
[checknameavailabilitywithlocationexecutesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/checkNameAvailabilityWithLocationExecuteSample.ts
[configurationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/configurationsGetSample.ts
[configurationslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/configurationsListByServerSample.ts
[configurationsputsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/configurationsPutSample.ts
[configurationsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/configurationsUpdateSample.ts
[databasescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/databasesCreateSample.ts
[databasesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/databasesDeleteSample.ts
[databasesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/databasesGetSample.ts
[databaseslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/databasesListByServerSample.ts
[firewallrulescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/firewallRulesCreateOrUpdateSample.ts
[firewallrulesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/firewallRulesDeleteSample.ts
[firewallrulesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/firewallRulesGetSample.ts
[firewallruleslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/firewallRulesListByServerSample.ts
[flexibleserverstartltrbackupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/flexibleServerStartLtrBackupSample.ts
[flexibleservertriggerltrprebackupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/flexibleServerTriggerLtrPreBackupSample.ts
[getprivatednszonesuffixexecutesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/getPrivateDnsZoneSuffixExecuteSample.ts
[locationbasedcapabilitiesexecutesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/locationBasedCapabilitiesExecuteSample.ts
[logfileslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/logFilesListByServerSample.ts
[ltrbackupoperationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/ltrBackupOperationsGetSample.ts
[ltrbackupoperationslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/ltrBackupOperationsListByServerSample.ts
[migrationscancelsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/migrationsCancelSample.ts
[migrationschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/migrationsCheckNameAvailabilitySample.ts
[migrationscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/migrationsCreateSample.ts
[migrationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/migrationsDeleteSample.ts
[migrationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/migrationsGetSample.ts
[migrationslistbytargetserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/migrationsListByTargetServerSample.ts
[migrationsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/migrationsUpdateSample.ts
[nameavailabilitycheckgloballysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/nameAvailabilityCheckGloballySample.ts
[nameavailabilitycheckwithlocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/nameAvailabilityCheckWithLocationSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/operationsListSample.ts
[privatednszonesuffixgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/privateDnsZoneSuffixGetSample.ts
[privateendpointconnectiondeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/privateEndpointConnectionDeleteSample.ts
[privateendpointconnectionupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/privateEndpointConnectionUpdateSample.ts
[privateendpointconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/privateEndpointConnectionsDeleteSample.ts
[privateendpointconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/privateEndpointConnectionsGetSample.ts
[privateendpointconnectionslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/privateEndpointConnectionsListByServerSample.ts
[privateendpointconnectionsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/privateEndpointConnectionsUpdateSample.ts
[privatelinkresourcesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/privateLinkResourcesGetSample.ts
[privatelinkresourceslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/privateLinkResourcesListByServerSample.ts
[quotausageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/quotaUsagesListSample.ts
[replicaslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/replicasListByServerSample.ts
[servercapabilitieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/serverCapabilitiesListSample.ts
[serverthreatprotectionsettingscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/serverThreatProtectionSettingsCreateOrUpdateSample.ts
[serverthreatprotectionsettingsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/serverThreatProtectionSettingsGetSample.ts
[serverthreatprotectionsettingslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/serverThreatProtectionSettingsListByServerSample.ts
[serverscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/serversCreateOrUpdateSample.ts
[serverscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/serversCreateSample.ts
[serversdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/serversDeleteSample.ts
[serversgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/serversGetSample.ts
[serverslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/serversListByResourceGroupSample.ts
[serverslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/serversListBySubscriptionSample.ts
[serverslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/serversListSample.ts
[serversrestartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/serversRestartSample.ts
[serversstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/serversStartSample.ts
[serversstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/serversStopSample.ts
[serversupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/serversUpdateSample.ts
[tuningconfigurationdisablesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/tuningConfigurationDisableSample.ts
[tuningconfigurationenablesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/tuningConfigurationEnableSample.ts
[tuningconfigurationlistsessiondetailssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/tuningConfigurationListSessionDetailsSample.ts
[tuningconfigurationlistsessionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/tuningConfigurationListSessionsSample.ts
[tuningconfigurationstartsessionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/tuningConfigurationStartSessionSample.ts
[tuningconfigurationstopsessionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/tuningConfigurationStopSessionSample.ts
[tuningindexlistrecommendationssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/tuningIndexListRecommendationsSample.ts
[tuningoptionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/tuningOptionsGetSample.ts
[tuningoptionslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/tuningOptionsListByServerSample.ts
[tuningoptionslistrecommendationssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/tuningOptionsListRecommendationsSample.ts
[virtualendpointscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/virtualEndpointsCreateSample.ts
[virtualendpointsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/virtualEndpointsDeleteSample.ts
[virtualendpointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/virtualEndpointsGetSample.ts
[virtualendpointslistbyserversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/virtualEndpointsListByServerSample.ts
[virtualendpointsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/virtualEndpointsUpdateSample.ts
[virtualnetworksubnetusageexecutesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/virtualNetworkSubnetUsageExecuteSample.ts
[virtualnetworksubnetusagelistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/postgresql/arm-postgresql-flexible/samples/v9/typescript/src/virtualNetworkSubnetUsageListSample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-postgresql-flexible?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/postgresql/arm-postgresql-flexible/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
